Rewrite QS customizer
Instead of custom draginess, use RecyclerView with a GridLayoutManager.

Still needs a bit of work, but the overall feel is significantly better
than before.

Change-Id: I3b3927472f69721e265ef7591de2f3052862f392

Former-commit-id: 62b63a02d7ca630e3ad39991ea6550cab57e5d22

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -1400,4 +1400,7 @@
     <!-- SysUI Tuner: Label for preview area in navigation bar tuner [CHAR LIMIT=NONE] -->
     <string name="preview">Preview</string>
 
+    <!-- Label for area where tiles can be dragged out of [CHAR LIMIT=60] -->
+    <string name="drag_to_add_tiles">Drag to add tiles</string>
+
 </resources>
