Settings drawer work
 - Final visuals
 - Show under status bar
 - Fix activity flow surrounding drawer use

Change-Id: I161702219c26cabc6b2d1adbaa6fbfb1d9fd5b07

Former-commit-id: cafda1f90ebf79ec3a56d43d8d3c0d63c9d84cb2

--- a/packages/SettingsLib/res/values/strings.xml
+++ b/packages/SettingsLib/res/values/strings.xml
@@ -768,4 +768,7 @@
     <!-- Summary for settings preference disabled by administrator [CHAR LIMIT=50] -->
     <string name="disabled_by_admin_summary_text">Disabled by administrator</string>
 
+    <!-- Option in navigation drawer that leads to Settings main screen [CHAR LIMIT=30] -->
+    <string name="home">Home</string>
+
 </resources>
